test/files/ill-typed/4.lam
let x = true in
  let y = false in
    if x
      then if y
        then false
        else true
      else if y
        then 1
        else 0
